# scaling-couscous

./: .pre-commit-config.yaml  ReadMe.md  pyproject.toml
.github/workflows/: python-app.yml
docker/: Dockerfile  webapp_entrypoint.sh
webapp/: main.py  models.py  test_webapp.py
