[tool.poetry]
name = "webpinger_fastapi"
version = "0.1.0"
description = "A simple webapi app using FastAPI"
authors = ["Maciej \"Kasprzol\" Kasprzyk <git_blame@kasprzyk.tech>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.76.0"
uvicorn = {extras = ["standard"], version = "^0.17.6"}

[tool.poetry.dev-dependencies]
pre-commit = "^2.19.0"
black = "^22.3.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
