[tool.poetry]
name = "webpinger_fastapi"
version = "0.1.0"
description = "A simple webapi app using FastAPI"
authors = ["Maciej \"Kasprzol\" Kasprzyk <git_blame@kasprzyk.tech>"]
readme = "ReadMe.md"
repository = "https://github.com/kasprzol/scaling-couscous"
packages = [
    { include = "webapp" },
]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.76.0"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
aiohttp = "^3.8.1"

[tool.poetry.dev-dependencies]
pre-commit = "^2.19.0"
black = "^22.3.0"
isort = "^5.10.1"
fastapi = {extras = ["test"], version = "^0.76.0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
